--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
 @font-face {
-    font-family: 'Montserrat', sans-serif;
-    src: url(./fonts/Montserrat-VariableFont_wght.ttf);
+    font-family: 'Poppins-Bold';
+    src: url(./fonts/Poppins-Bold.ttf);
+}
+@font-face {
+    font-family: 'Poppins-Medium';
+    src: url('./fonts/Poppins-Medium.ttf');
+}
+@font-face {
+    font-family: 'Poppins-Regular';
+    src: url(./fonts/Poppins-Regular.ttf);
+}
+@font-face {
+    font-family: 'Poppins-Light';
+    src: url(./fonts/Poppins-Light.ttf);
+}
+@font-face {
+    font-family: 'Poppins-ExtraLight';
+    src: url(./fonts/Poppins-ExtraLight.ttf);
 }
 
 *{
@@ -11,64 +27,99 @@
 :root{
     --black: #000;
     --white: #fff;
-    --blue: #170074;
-    --grey: #707070;
+    --blue: #1b335e;
+    --purple: #7000ff;
     --grey-bg: rgb(14, 13, 13);
 }
-
-body{
-    background-color: var(--grey-bg);
-    font-family: 'Montserrat', sans-serif;
-    color: var(--white);
-    padding: 25px 25px;
-
+nav{
+    background-color: #fff;
+}
+nav #logo{
+    width: 35%;
+    padding: 20px 25px 15px 25px;
+}
+header{
+    width: 100vw;
+    background-image: linear-gradient(180deg,#f1f4ff,hsla(0,0%,100%,0));
+    padding: 25px 10px;
 }
 
-.logo{
-    width: 40%;
-    margin-bottom: 8px;
+header h1{
+    text-align: center;
+    font-family: 'Poppins-Bold';
+    color: var(--blue);
+    line-height: 1.3;
 }
 
-h1{
-    font-size: 24px;
-    margin-bottom: 12px;
-}
-h2{
-    font-size: 18px;
-    font-weight: 400;
-    margin-bottom: 24px;
-}
-.button-scroll{
-    margin-bottom: 24px;
+header h3{
+    font-family: 'Poppins-ExtraLight';
+    font-size: 22px;
+    text-align: center;
+    margin-top: 12px;
+    color: var(--blue);
 }
 
-.button-scroll button{
-    border-radius: 77px;
+header button{
+    padding: 22px 44px;
+    border-radius: 11px;
     border: none;
-    font-family: 'Montserrat', sans-serif;
-    padding: 10px;
+    background-color: var(--purple);
+    text-align: center;
+    display: block;
+    margin: 25px auto 15px auto;
     color: var(--white);
+    font-family: 'Poppins-Medium';
 }
-.button-scroll button:first-child{
-    background-color: var(--blue);
-}
-.button-scroll button:last-child{
-    background-color: var(--grey);
-}
-.introduction{
-    background-color: var(--blue);
-    border-radius: 20px;
-    padding: 24px;
-    margin-bottom: 16px;
-}
-.introduction h3{
-    font-size: 16px;
-    margin-bottom: 16px;
-}
-.introduction p{
-    font-size: 12px;
+header img{
+    width: 100%;
+    margin-top: 24px;
 }
 
-iframe{
-    border-radius: 20px;
+/* SECTION USERS-WRAPER */
+.users-section{
+    padding-inline: 15px;
 }
+.users-section h5{
+    text-align: center;
+    margin-block: 16px;
+    font-family: 'Poppins-ExtraLight';
+}
+.users-slider{
+    display: flex;
+    align-items: center;
+}
+.users{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.users-wrapper{
+    display: flex;
+    width: 100px;
+    overflow: hidden;
+    transition: all 25s ease-in-out;
+}
+.users-column{
+    min-width: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.user .profile-img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
+
+.user .user-name{
+    font-family: 'Poppins-Light';
+}
+.user .user-social{
+    font-family: 'Poppins-ExtraLight';
+}
+
+
+
+
