--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@
 }
 nav{
     background-color: #fff;
+    position: fixed;
+    width: 100%;
+    box-shadow: 1px 1px 11px 4px hsl(0deg 0% 76% / 14%);
+
 }
 nav #logo{
     width: 35%;
@@ -41,7 +45,7 @@ nav #logo{
 header{
     width: 100vw;
     background-image: linear-gradient(180deg,#f1f4ff,hsla(0,0%,100%,0));
-    padding: 25px 10px;
+    padding: 80px 10px 25px 10px;
 }
 
 header h1{
@@ -75,9 +79,10 @@ header img{
     margin-top: 24px;
 }
 
-/* SECTION USERS-WRAPER */
+/* SECTION USERS */
 .users-section{
-    padding-inline: 15px;
+    padding-inline: 35px;
+    margin-bottom: 35px;
 }
 .users-section h5{
     text-align: center;
@@ -93,19 +98,17 @@ header img{
     justify-content: space-between;
     text-align: center;
 }
-
-.users-wrapper{
-    display: flex;
-    width: 100px;
+.users-column {
+    transition: opacity .5s ease-in-out;
+    opacity: 0;
+    max-height: 0;
     overflow: hidden;
-    transition: all 25s ease-in-out;
-}
-.users-column{
-    min-width: 100px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-}
+  }
+  
+  .users-column.active {
+    opacity: 1;
+    max-height: 100%;
+  }
 
 .user .profile-img{
     width: 35px;
@@ -120,6 +123,54 @@ header img{
     font-family: 'Poppins-ExtraLight';
 }
 
+/* SECTION STEP */
+.step{
+    padding-inline: 15px;
+}
+.step h2{
+    text-align: center;
+    font-family: 'Poppins-Bold';
+    font-size: 20px;
+    color: var(--blue);
+    margin-bottom: 24px;
+}
 
+/* SECTION WHY-USE */
 
+.why-use{
+    padding-inline: 20px;
+}
+.why-use h2{
+    font-family: 'Poppins-Bold';
+    text-align: center;
+    font-size: 20px;
+    color: var(--blue);
+    margin-block: 40px;
+}
+.reasons{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
 
+}
+.reason{
+    display: flex;
+    gap: 16px;
+}
+.reason img{
+    width: 27px;
+    height: 27px;
+    padding-top: 4px;
+}
+.reason h3{
+    font-family: 'Poppins-Medium';
+    color: var(--blue);
+    font-size: 18px;
+    margin-bottom: 12px;
+}
+.reason p{
+    font-family: 'Poppins-Regular';
+    font-size: 14px;
+    color: #8c96a8;
+    margin-bottom: 16px;
+}
