--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ header img{
 
 /* SECTION COMPAY-HOME */
 .compay-home{
-    padding-inline: 15px;
+    padding: 30px 15px;
     background-color: #f2fcff;
 }
 .compay-home .logo{
@@ -241,20 +241,86 @@ header img{
 }
 .page-buttons{
     width: 100%;
-    height: 150px;
+    height: 80px;
     display: flex;
-    overflow-x: scroll;
-    text-align: center;
+    justify-content: center;
+    margin-top: 16px;
 }
 .page-button{
-    width: 50%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    padding-inline: 10px;
+    width: 100%;
+    justify-content: center;
+    gap: 8px;
+    border:1px solid #b6bbc418;
+}
+.page-button.selected{
+    border-bottom: 4px solid #1b335e;
+    background-color: #fff;
+}
+.page-button h3{
+    font-family: 'Poppins-ExtraLight';
+    font-size: 14px;
+}
+.page-button img{
+    width: 22px;
+}
+.page-content{
+    background-color: var(--white);
+    padding: 30px 25px;
+}
+.page{
+    opacity: 0;
+    height: 0;
+    transition: all .5s ease;
+}
+.page.selected{
+    opacity: 1;
+    height: auto;
+}
+.page-icon{
+    width: 60px;
+    height: 60px;
+    background-color: #e9eeff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    margin-bottom: 16px;
+}
+.page-icon img{
+    width: 30px;
+}
+.page-img{
+    width: 100%;
+    margin-top: 16px;
 }
 
-.page-button img{
-    width: 25px;
-    pointer-events: auto;
-    display: block;
+.page h2{
+    margin-bottom: 16px;
 }
-.page img{
-    width: 100%;
+.page ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
 }
+.page ul li{
+    display: flex;
+    gap: 8px;
+    font-family: 'Poppins-Light';
+}
+.page ul li img{
+    width: 22px;
+}
+.page p{
+    font-family: 'Poppins-Light';
+}
+.page h3{
+    font-family: 'Poppins-Regular';
+    color: var(--blue);
+    margin-bottom: 16px;
+}
+
